src/scss/Partials/_platform.scss
[data-server-version="12"] {
    #app-content {
        #controls {
            top: 0;
        }
    }

    #app-navigation {
        #app-settings {
            max-height : 90px;

            &.open {
                max-height : 270px;
            }
        }
    }

    @media all and (max-width : 360px) {
        #controls #app-navigation-toggle {
            float: left;
        }
    }
}

[data-server-version="14"] {
    width: 100%;

    #app-navigation {
        transform: translateX(0);

        #app-settings {
            position: relative;
        }
    }

    #app-content {
        overflow-y: initial;
        overflow-x: initial;
        z-index:    2000;

        @media all and (max-width : 1366px) {
            &.show-details .app-content-right {
                left: 0;
            }
        }
    }
}

